# proxyServer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  fileManager.cpp  fileManager.hpp  ipc.hpp  main.cpp  server.cpp  server.hpp
proto/: CMakeLists.txt  messages.proto
